fix z-index for sides

--- a/src/styles/virtualCardDetails.scss
+++ b/src/styles/virtualCardDetails.scss
@@ -7,6 +7,7 @@
   backdrop-filter: blur(30px);
   background: #FFFFFF08;
   box-shadow: 0px 0px 32px 0px #FFFFFF0A inset;
+  z-index: 0;
 }
 
 .background-circle {
@@ -104,6 +105,7 @@
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
+  z-index: 1;
 }
 
 .back {
